# HMLR-Agentic-AI-Memory-System

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: claude-code-setup.md  remember-skill-config.md
docs/plans/: 2026-02-28-hmlr-mcp-server.md
docs/reflections/: 2026-02-28-session-1.md  2026-02-28-session-2.md  2026-02-28-session-3.md
hmlr/: client.py  mcp_server.py
hmlr/core/: external_api_client.py  model_config.py
research/: brainstorm-summary.md  codebase-audit.md  hmlr-architecture.md
scripts/: garden-cron.sh  ingest-reflection.py
tests/: test_anthropic_extended_thinking.py  test_claude_cli_provider.py  test_ingest_reflection.py  test_integration_mcp.py  test_mcp_server.py
