[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hmlr-memory"
version = "0.2.0"
description = "HMLR memory system with MCP server interface for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Sean-V-Dev"},
]
keywords = [
    "ai",
    "memory",
    "agents",
    "rag",
    "llm",
    "retrieval",
    "bridge-blocks",
    "hierarchical-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "anthropic>=0.42.0",
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
]
telemetry = [
    "arize-phoenix>=4.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/weytani/HMLR-Agentic-AI-Memory-System"
Repository = "https://github.com/weytani/HMLR-Agentic-AI-Memory-System"
Issues = "https://github.com/weytani/HMLR-Agentic-AI-Memory-System/issues"

[tool.hatch.build.targets.wheel]
packages = ["hmlr"]
